@@ -28,7 +28,8 @@ this is not required. Except for the first, header line, which is always
 ignored, each line in the location file must contain 7
 comma-separated fields representing contour number, X, Y, and Z center 
 coordinates in pixels, and Z-Y-X Slicer angles in degrees (stored in the
-order X, Y, Z), respectively.
+order X, Y, Z), respectively, representing the rotation to be applied to 
+the input model.
 
 .SH OPTIONS
 Clonemodel uses the PIP package for input (see the manual page for pip(1)).
