@@ -29,7 +29,8 @@ input volume created by PEET, this is not required. Except for the first,
 header line, which is always ignored, each line in the location file 
 must contain 7 comma-separated fields representing contour number, 
 X, Y, and Z center coordinates in pixels, and Z-Y-X Slicer angles in degrees,
-(stored in the order X, Y, Z), respectively.
+(stored in the order X, Y, Z), respectively, representing the rotation
+to be applied to the input volume.
 
 .SH OPTIONS
 Clonevolume uses the PIP package for input (see the manual page for pip(1)).
